--- a/FINAL EDM.html
+++ b/FINAL EDM.html
@@ -9,11 +9,11 @@
 
     <!-- View in Browser Link -->
     <table width="100%" border="0" cellspacing="0" cellpadding="0" style="background-color:#000000; margin:0; padding:0;">
-		<tr>
-			<td align="center" style="padding:10px;">
-				<a href="#" style="color:#aaaaaa; text-decoration:underline; font-size:12px;">View this email in your browser</a>
-			</td>
-		</tr>
+        <tr>
+            <td align="center" style="padding:10px;">
+                <a href="https://raw.githubusercontent.com/MumblesCode/edm-preview/refs/heads/main/FINAL%20EDM.html" style="color:#aaaaaa; text-decoration:underline; font-size:12px;">View this email in your browser</a>
+            </td>
+        </tr>
     </table>
 
     <!-- Preheader Text -->
