--- a/FINAL EDM.html
+++ b/FINAL EDM.html
@@ -7,14 +7,14 @@
 </head>
 <body style="margin:0; padding:0; background-color:#000000;">
 
-    <!-- View in Browser Link -->
-    <table width="100%" border="0" cellspacing="0" cellpadding="0" style="background-color:#000000; margin:0; padding:0;">
-        <tr>
-            <td align="center" style="padding:10px;">
-                <a href="https://raw.githubusercontent.com/MumblesCode/edm-preview/refs/heads/main/FINAL%20EDM.html" style="color:#aaaaaa; text-decoration:underline; font-size:12px;">View this email in your browser</a>
-            </td>
-        </tr>
-    </table>
+<!-- View in Browser Link -->
+<table width="100%" border="0" cellspacing="0" cellpadding="0" style="background-color:#000000; margin:0; padding:0;">
+    <tr>
+        <td align="center" style="padding:10px;">
+           <a href="https://mumblescode.github.io/edm-preview/FINAL%20EDM.html" style="color:#aaaaaa; text-decoration:underline; font-size:12px;">View this email in your browser</a>
+        </td>
+    </tr>
+</table>
 
     <!-- Preheader Text -->
     <div style="display:none; font-size:1px; color:#000000;">An Invitation: Factory Sound has landed in Sydney! Visit our new store for exclusive promotions, pro audio gear, and a chance to win a $1000 gift card.</div>
