--- a/FINAL EDM.html
+++ b/FINAL EDM.html
@@ -34,7 +34,7 @@
                                     <td align="center" style="font-size:18px; text-transform:uppercase;">
                                         <a href="https://factorysound.com/shop-page/" target="_blank" rel="noopener" style="color:#fff; text-decoration:none; font-weight:bold; margin:0 10px;">Shop Now</a> |
                                         <a href="https://factorysound.com/our-brands/" target="_blank" rel="noopener" style="color:#fff; text-decoration:none; font-weight:bold; margin:0 10px;">Brands</a> |
-                                        <a href="https://factorysound.com/projects/" target="_blank" rel="noopener" style="color:#fff; text-decoration:none; font-weight:bold; margin:0 10px;">Install Services</a>
+                                        <a href="https://factorysound.com/projects/" target="_blank" rel="noopener" style="color:#fff; text-decoration:none; font-weight:bold; margin:0 10px;">Projects</a>
                                     </td>
                                 </tr>
                             </table>
