--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
 		
 			<!-- View in Browser -->
                         <div style="font-size:10px; color:#aaaaaa; text-align:center; margin:0 0 -40px;">
-                            <a href="https://example.com/view-in-browser" target="_blank" style="color:#aaaaaa; text-decoration:underline;">View this email in your browser</a>
+                            <a href="https://mumblescode.github.io/edm-preview" target="_blank" style="color:#aaaaaa; text-decoration:underline;">View this email in your browser</a>
                         </div>
 		
       <!-- Main Container -->
