--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
             <!-- Hero & Intro (New GIF) -->
             <div class="hero">
               <img 
-                src="https://raw.githubusercontent.com/MumblesCode/Factory-Sound/main/COME%20IN%20STORE%2C%20GO%20IN%20THE%20DRAW%20(1080%20x%201350%20px).gif" 
+                src="https://raw.githubusercontent.com/MumblesCode/Factory-Sound/main/InStoreEDM2.gif" 
                 alt="Factory Sound Sydney Storefront GIF"
                 style="
                   display:block;
